outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-22_21-21-05/evaluations/problem_eval-1486038533064284997_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but dynamically adjusts the threshold based on the remaining nodes with a different scaling factor and threshold adjustment formula, favoring the destination more conservatively when fewer nodes remain.}
                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    default but dynamically adjusts the threshold based on the remaining nodes with a different scaling factor and threshold adjustment formula, favoring the destination more conservatively when fewer nodes remain.}
                                                                                                                                                                                                                      ^
SyntaxError: unmatched '}'
